aws/Project-201-Roman-Numerals-Converter/cfn-V2-project2.yml
AWSTemplateFormatVersion: 2010-09-09
Description: |
  CloudFormation Template for Roman Numerals Converter Application. This template creates Python Flask Web Application on 
  Amazon Linux 2 (ami-01cc34ab2709337aa) EC2 Instance with custom security group allowing http connections on port 80 and SSH 
  connection on port 22. Roman Numerals Converter Application is downloaded from Github repository, then installed on Flask.

Parameters:
  myKP:
    Description: Enter the name of your Key Pair for SSH connection 
    Type: AWS::EC2::KeyPair::KeyName
    ConstraintDescription: Must be the name of existing EC2 KeyPair. 

Resources:
  mySG:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: Enable HTTP for Flask Web Server and SSH port to secure reach to my EC2  
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: 80
          ToPort: 80
          CidrIp: 0.0.0.0/0
        - IpProtocol: tcp
          FromPort: 22
          ToPort: 22
          CidrIp: 0.0.0.0/0

  myWebServer:
    Type: AWS::EC2::Instance
    Properties:
      ImageId: ami-01cc34ab2709337aa
      InstanceType: t2.micro
      KeyName: !Ref myKP 
      SecurityGroupIds:
        - !Ref mySG   
      Tags:
        - Key: Name
          Value: !Sub Web Server of ${AWS::StackName} Stack
      UserData: !Base64 |
        #!/bin/bash
        yum update -y 
        yum install python3 -y 
        pip3 install flask
        cd /home/ec2-user
        wget https://raw.githubusercontent.com/Nec2005/My_AWS_Course_Projects/main/aws/Project-201-Roman-Numerals-Converter/myapp.py
        mkdir templates && cd templates
        wget https://raw.githubusercontent.com/Nec2005/My_AWS_Course_Projects/main/aws/Project-201-Roman-Numerals-Converter/templates/index.html
        wget https://raw.githubusercontent.com/Nec2005/My_AWS_Course_Projects/main/aws/Project-201-Roman-Numerals-Converter/templates/result.html
        cd .. 
        python3 myapp.py

Outputs:
  WebSiteURL:
    Value: !Sub
      - http://${PublicAddress}
      - PublicAddress: !GetAtt myWebServer.PublicDnsName 
    Description: Roman Numerals Converter Application URL
